--- a/LicenseReal/nbproject/private/private.properties
+++ b/LicenseReal/nbproject/private/private.properties
@@ -1,6 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\emcua\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
 j2ee.server.domain=C:/Users/emcua/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 9.0
+j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 9.0
+javac.debug=true
+javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\emcua\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
