--- a/LicenseReal/nbproject/private/private.properties
+++ b/LicenseReal/nbproject/private/private.properties
@@ -6,4 +6,4 @@ j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\emcua\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
