--- a/LicenseReal/nbproject/private/private.properties
+++ b/LicenseReal/nbproject/private/private.properties
@@ -1,9 +1,13 @@
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+deploy.ant.properties.file=C:\\Users\\emcua\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+file.reference.commons-fileupload-1.5.jar=E:\\Backup\\UsageForCode\\Java_NetBeans_Lib\\commons-fileupload-1.5.jar
+file.reference.gson-2.3.1__1_.jar=E:\\Backup\\UsageForCode\\Java_NetBeans_Lib\\gson-2.3.1.jar
+file.reference.org.apache.commons.io.jar=E:\\Backup\\UsageForCode\\Java_NetBeans_Lib\\org.apache.commons.io.jar
 file.reference.sqljdbc4.jar=E:\\Backup\\UsageForCode\\Java_NetBeans_Lib\\sqljdbc4.jar
+file.reference.sqljdbc4.jar-1=E:\\Backup\\UsageForCode\\Java_NetBeans_Lib\\sqljdbc4.jar
 j2ee.server.domain=C:/Users/emcua/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 9.0
-j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 9.0
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
+j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\HOANG ANH\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\emcua\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
