--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,5 @@
 /LicenseReal/nbproject/
 /LicenseReal/lib/
 /LicenseReal/*.xml
-<<<<<<< HEAD
 /LicenseReal/build/
-=======
-/LicenseReal/build/
->>>>>>> master
+/build/
