--- a/LicenseReal/nbproject/private/private.properties
+++ b/LicenseReal/nbproject/private/private.properties
@@ -1,8 +1,11 @@
-deploy.ant.properties.file=C:\\Users\\Vo Thanh Tuyen\\AppData\\Roaming\\NetBeans\\12.0\\tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\emcua\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+file.reference.commons-fileupload2-core-2.0.0-M1.jar=E:\\Backup\\UsageForCode\\Java_NetBeans_Lib\\commons-fileupload-1.5.jar
+file.reference.commons-io-2.14.0.jar=E:\\Backup\\UsageForCode\\Java_NetBeans_Lib\\org.apache.commons.io.jar
+file.reference.javax.mail.jar=E:\\Backup\\UsageForCode\\Java_NetBeans_Lib\\javax.mail.jar
 file.reference.sqljdbc4.jar=E:\\Backup\\UsageForCode\\Java_NetBeans_Lib\\sqljdbc4.jar
 j2ee.server.domain=C:/Users/emcua/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 8.5
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5
+j2ee.server.home=E:/Backup/UsageForCode/apache-tomcat-9.0.73-windows-x64/apache-tomcat-9.0.73
+j2ee.server.instance=tomcat90:home=E:\\Backup\\UsageForCode\\apache-tomcat-9.0.73-windows-x64\\apache-tomcat-9.0.73
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
