--- a/LicenseReal/nbproject/private/private.properties
+++ b/LicenseReal/nbproject/private/private.properties
@@ -1,8 +1,11 @@
-deploy.ant.properties.file=C:\\Users\\Vo Thanh Tuyen\\AppData\\Roaming\\NetBeans\\12.0\\tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+file.reference.gson-2.3.1__1_.jar=C:\\Users\\Admin\\Desktop\\Tu hoc\\SupportSWP\\License\\License\\Thu Vien\\gson-2.3.1 (1).jar
+file.reference.org.apache.commons.io.jar=C:\\Users\\Admin\\Desktop\\Tu hoc\\SupportSWP\\License\\License\\Thu Vien\\org.apache.commons.io.jar
 file.reference.sqljdbc4.jar=E:\\Backup\\UsageForCode\\Java_NetBeans_Lib\\sqljdbc4.jar
+file.reference.sqljdbc4.jar-1=C:\\Users\\Admin\\Desktop\\Tu hoc\\SupportSWP\\License\\License\\Thu Vien\\sqljdbc4.jar
 j2ee.server.domain=C:/Users/emcua/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 8.5
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 9.0
+j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 9.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
