fix check payment

--- a/LicenseReal/web/WEB-INF/web.xml
+++ b/LicenseReal/web/WEB-INF/web.xml
@@ -40,6 +40,10 @@
         <servlet-name>BookingSlotServlet</servlet-name>
         <servlet-class>servlet.Booking.BookingSlotServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ManageStaffAccountServlet</servlet-name>
+        <servlet-class>servlet.ManageAccount.ManageStaffAccountServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>MainController</servlet-name>
         <url-pattern>/MainController</url-pattern>
@@ -79,6 +83,10 @@
     <servlet-mapping>
         <servlet-name>BookingSlotServlet</servlet-name>
         <url-pattern>/BookingSlotServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManageStaffAccountServlet</servlet-name>
+        <url-pattern>/ManageStaffAccountServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
